--- a/Simple Shopping web.html
+++ b/Simple Shopping web.html
@@ -5,5 +5,9 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Document</title>
     </head>
-    <body></body>
+    <body>
+        <article>
+            <h2></h2>
+        </article>
+    </body>
 </html>
