--- a/Simple Shopping web.html
+++ b/Simple Shopping web.html
@@ -7,7 +7,22 @@
     </head>
     <body>
         <article>
-            <h2></h2>
+            <h2>Ash-Greninja Fan Art</h2>
+            <img
+                src="image/Ash-Greninja Art.jpg"
+                alt="The product"
+                width="250"
+            />
+            <p><strong>$65.00</strong></p>
+            <p>digital delivery</p>
+            <p>physical metalic peice delivery on request.</p>
+            <a href="#"> More information &rArr;</a>
+            <h3>Product details</h3>
+            <ul>
+                <li>High quality digital version</li>
+                <li>Refletive physical Metalic option</li>
+            </ul>
+            <button>Add to cart</button>
         </article>
     </body>
 </html>
