more detail alt

--- a/Simple Shopping web.html
+++ b/Simple Shopping web.html
@@ -10,7 +10,7 @@
             <h2>Ash-Greninja Fan Art</h2>
             <img
                 src="image/Ash-Greninja Art.jpg"
-                alt="The product"
+                alt="Ash-Greninja Fan Art"
                 width="250"
             />
             <p><strong>$65.00</strong></p>
