--- a/Simple Shopping web.html
+++ b/Simple Shopping web.html
@@ -16,7 +16,7 @@
             <p><strong>$65.00</strong></p>
             <p>digital delivery</p>
             <p>physical metalic peice delivery on request.</p>
-            <a href="#"> More information &rArr;</a>
+            <a href="#"> More information &rarr;</a>
             <h3>Product details</h3>
             <ul>
                 <li>High quality digital version</li>
