--- a/Simple Shopping web.html
+++ b/Simple Shopping web.html
@@ -3,11 +3,12 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <link rel="stylesheet" href="Simple Style.css"/>
         <title>Document</title>
     </head>
     <body>
         <article>
-            <h2>Ash-Greninja Fan Art</h2>
+            <h2 class="art">Ash-Greninja Fan Art</h2>
             <img
                 src="image/Ash-Greninja Art.jpg"
                 alt="Ash-Greninja Fan Art"
