--- a/Simple Shopping web.html
+++ b/Simple Shopping web.html
@@ -1,3 +1,7 @@
+<!-- 
+    1. created a simple shopping website to sell an art of Ash-Greninja
+    2. added in basic styles to the website(details in Simple Style.css)
+-->
 <!DOCTYPE html>
 <html lang="en">
     <head>
