--- a/Simple Shopping web.html
+++ b/Simple Shopping web.html
@@ -12,7 +12,7 @@
     </head>
     <body>
         <article class="product">
-            <h2 class="name">Ash-Greninja Fan Art</h2>
+            <h2 class="product-name">Ash-Greninja Fan Art</h2>
             <img
                 src="image/Ash-Greninja Art.jpg"
                 alt="Ash-Greninja Fan Art"
@@ -21,13 +21,13 @@
             <p class="price"><strong>$65.00</strong></p>
             <p class="delivery">digital delivery</p>
             <p>physical metalic peice delivery on request.</p>
-            <a href="#"> More information &rarr;</a>
-            <h3 class="details">Product details</h3>
-            <ul>
+            <a class="more-info" href="#"> More information &rarr;</a>
+            <h3 class="details-title">Product details</h3>
+            <ul class="details-list">
                 <li>High quality digital version</li>
                 <li>Refletive physical Metalic option</li>
             </ul>
-            <button class="cart">Add to cart</button>
+            <button class="add-cart">Add to cart</button>
         </article>
     </body>
 </html>
