--- a/Simple Shopping web.html
+++ b/Simple Shopping web.html
@@ -7,27 +7,29 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <link rel="stylesheet" href="Simple Style.css"/>
+        <link rel="stylesheet" href="Simple Style.css" />
         <title>Document</title>
     </head>
     <body>
-        <article class="product">
-            <h2 class="product-name">Ash-Greninja Fan Art</h2>
-            <img
-                src="image/Ash-Greninja Art.jpg"
-                alt="Ash-Greninja Fan Art"
-                width="250"
-            />
-            <p class="price"><strong>$65.00</strong></p>
-            <p class="delivery">digital delivery</p>
-            <p>physical metalic peice delivery on request.</p>
-            <a class="more-info" href="#"> More information &rarr;</a>
-            <h3 class="details-title">Product details</h3>
-            <ul class="details-list">
-                <li>High quality digital version</li>
-                <li>Refletive physical Metalic option</li>
-            </ul>
-            <button class="add-cart">Add to cart</button>
-        </article>
+        <div>
+            <article class="product">
+                <h2 class="product-name">Ash-Greninja Fan Art</h2>
+                <img
+                    src="image/Ash-Greninja Art.jpg"
+                    alt="Ash-Greninja Fan Art"
+                    width="250"
+                />
+                <p class="price"><strong>$65.00</strong></p>
+                <p class="delivery">digital delivery</p>
+                <p>physical metalic peice delivery on request.</p>
+                <a class="more-info" href="#"> More information &rarr;</a>
+                <h3 class="details-title">Product details</h3>
+                <ul class="details-list">
+                    <li>High quality digital version</li>
+                    <li>Refletive physical Metalic option</li>
+                </ul>
+                <button class="add-cart">Add to cart</button>
+            </article>
+        </div>
     </body>
 </html>
