add the container class

--- a/Simple Shopping web.html
+++ b/Simple Shopping web.html
@@ -11,7 +11,7 @@
         <title>Document</title>
     </head>
     <body>
-        <div>
+        <div class="container">
             <article class="product">
                 <h2 class="product-name">Ash-Greninja Fan Art</h2>
                 <img
