added a sale label

--- a/Simple Shopping web.html
+++ b/Simple Shopping web.html
@@ -12,6 +12,7 @@
     </head>
     <body>
         <article class="product">
+            <p class="sale">SALE</p>
             <h2 class="product-name">Ash-Greninja Fan Art</h2>
             <img
                 src="image/Ash-Greninja Art.jpg"
@@ -22,6 +23,9 @@
             <p class="delivery">digital delivery</p>
             <p>physical metalic peice delivery on request.</p>
             <a class="more-info" href="#"> More information &rarr;</a>
+            <div class="colors">
+                <div></div>
+            </div>
             <h3 class="details-title">Product details</h3>
             <ul class="details-list">
                 <li>High quality digital version</li>
