add different color options

--- a/Simple Shopping web.html
+++ b/Simple Shopping web.html
@@ -23,8 +23,11 @@
             <p class="delivery">digital delivery</p>
             <p>physical metalic peice delivery on request.</p>
             <a class="more-info" href="#"> More information &rarr;</a>
+            <br>
             <div class="colors">
-                <div></div>
+                <div class="colors-red"></div>
+                <div class="colors-blue"></div>
+                <div class="colors-yellow"></div>
             </div>
             <h3 class="details-title">Product details</h3>
             <ul class="details-list">
