--- a/Simple Shopping web.html
+++ b/Simple Shopping web.html
@@ -23,11 +23,10 @@
             <p class="delivery">digital delivery</p>
             <p>physical metalic peice delivery on request.</p>
             <a class="more-info" href="#"> More information &rarr;</a>
-            <br>
             <div class="colors">
-                <div class="colors-red"></div>
-                <div class="colors-blue"></div>
-                <div class="colors-yellow"></div>
+                <div class="color color-red"></div>
+                <div class="color color-blue"></div>
+                <div class="color color-yellow"></div>
             </div>
             <h3 class="details-title">Product details</h3>
             <ul class="details-list">
