float layout modification

--- a/Simple Shopping web.html
+++ b/Simple Shopping web.html
@@ -17,22 +17,26 @@
             <img
                 src="image/Ash-Greninja Art.jpg"
                 alt="Ash-Greninja Fan Art"
-                width="250"
+                class="product-image"
             />
-            <p class="price"><strong>$65.00</strong></p>
-            <p class="delivery">digital delivery</p>
-            <p>physical metalic peice delivery on request.</p>
-            <a class="more-info" href="#"> More information &rarr;</a>
-            <div class="colors">
-                <div class="color color-red"></div>
-                <div class="color color-blue"></div>
-                <div class="color color-yellow"></div>
+            <div class="selling">
+                <p class="price"><strong>$65.00</strong></p>
+                <p class="delivery">digital delivery</p>
+                <p class="delivery-details">physical metalic peice delivery on request.</p>
+                <a class="more-info" href="#"> More information &rarr;</a>
+                <div class="colors">
+                    <div class="color color-red"></div>
+                    <div class="color color-blue"></div>
+                    <div class="color color-yellow"></div>
+                </div>
             </div>
-            <h3 class="details-title">Product details</h3>
-            <ul class="details-list">
-                <li>High quality digital version</li>
-                <li>Refletive physical Metalic option</li>
-            </ul>
+            <div class="details">
+                <h3 class="details-title">Product details</h3>
+                <ul class="details-list">
+                    <li>High quality digital version</li>
+                    <li>Refletive physical Metalic option</li>
+                </ul>
+            </div>
             <button class="add-cart">Add to cart</button>
         </article>
     </body>
