--- a/Simple Shopping web.html
+++ b/Simple Shopping web.html
@@ -22,7 +22,9 @@
             <div class="selling">
                 <p class="price"><strong>$65.00</strong></p>
                 <p class="delivery">digital delivery</p>
-                <p class="delivery-details">physical metalic peice delivery on request.</p>
+                <p class="delivery-details">
+                    physical metalic peice delivery on request.
+                </p>
                 <a class="more-info" href="#"> More information &rarr;</a>
                 <div class="colors">
                     <div class="color color-red"></div>
