--- a/Simple Shopping web.html
+++ b/Simple Shopping web.html
@@ -36,7 +36,7 @@
                 <h3 class="details-title">Product details</h3>
                 <ul class="details-list">
                     <li>High quality digital version</li>
-                    <li>Refletive physical Metalic option</li>
+                    <li>Reflective physical Metalic option</li>
                 </ul>
             </div>
             <button class="add-cart">Add to cart</button>
