create flex container

--- a/Simple Shopping Web With Flexbox.html
+++ b/Simple Shopping Web With Flexbox.html
@@ -14,30 +14,32 @@
         <article class="product">
             <p class="sale">SALE</p>
             <h2 class="product-name">Ash-Greninja Fan Art</h2>
-            <img
-                src="image/Ash-Greninja Art.jpg"
-                alt="Ash-Greninja Fan Art"
-                class="product-image"
-            />
-            <div class="selling">
-                <p class="price"><strong>$65.00</strong></p>
-                <p class="delivery">digital delivery</p>
-                <p class="delivery-details">
-                    physical metalic peice delivery on request.
-                </p>
-                <a class="more-info" href="#"> More information &rarr;</a>
-                <div class="colors">
-                    <div class="color color-red"></div>
-                    <div class="color color-blue"></div>
-                    <div class="color color-yellow"></div>
+            <div class="container">
+                <img
+                    src="image/Ash-Greninja Art.jpg"
+                    alt="Ash-Greninja Fan Art"
+                    class="product-image"
+                />
+                <div class="selling">
+                    <p class="price"><strong>$65.00</strong></p>
+                    <p class="delivery">digital delivery</p>
+                    <p class="delivery-details">
+                        physical metalic peice delivery on request.
+                    </p>
+                    <a class="more-info" href="#"> More information &rarr;</a>
+                    <div class="colors">
+                        <div class="color color-red"></div>
+                        <div class="color color-blue"></div>
+                        <div class="color color-yellow"></div>
+                    </div>
                 </div>
-            </div>
-            <div class="details">
-                <h3 class="details-title">Product details</h3>
-                <ul class="details-list">
-                    <li>High quality digital version</li>
-                    <li>Reflective physical Metalic option</li>
-                </ul>
+                <div class="details">
+                    <h3 class="details-title">Product details</h3>
+                    <ul class="details-list">
+                        <li>High quality digital version</li>
+                        <li>Reflective physical Metalic option</li>
+                    </ul>
+                </div>
             </div>
             <button class="add-cart">Add to cart</button>
         </article>
