--- a/Simple Shopping Web With Flexbox.html
+++ b/Simple Shopping Web With Flexbox.html
@@ -21,8 +21,10 @@
                     class="product-image"
                 />
                 <div class="selling">
-                    <p class="price"><strong>$65.00</strong></p>
-                    <p class="delivery">digital delivery</p>
+                    <div class="price-shipping">
+                        <p class="price"><strong>$65.00</strong></p>
+                        <p class="delivery">digital delivery</p>
+                    </div>
                     <p class="delivery-details">
                         physical metalic peice delivery on request.
                     </p>
